Aggiornamento elettronica it

--- a/arduinoandelectronics_it.html
+++ b/arduinoandelectronics_it.html
@@ -15,13 +15,13 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
-					My projects,&nbsp;my skills and my life.</h1>
-				</div>
-			</header>
+		<header id="header">
+			<div class="inner">
+				<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
+				La mia vita,&nbsp;miei progetti e le mie competenze.</h1>
+			</div>
+		</header>
 
 		<!-- Main -->
 			<div id="main">
@@ -29,18 +29,20 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Arduino, Electronics projects and engineering stuff</h2>
+							<h2>Arduino, Elettronica e simili</h2>
 						</header>
-						<p>I have always loved to build and give vent to my creativity.
-							Thanks to my studies,&nbsp;work and my personal interest,&nbsp;I have been able to improve myself more and more.<br/>
-							In this section you can see an overview of my projects.</p>
+						<p>Fin da che mi ricordi ho sempre amato dare sfogo alla mia creativit&agrave;. Grazie ai miei studi, al lavoro
+							e ai miei hobby,&nbsp;sono riuscito a dare sfogo alla mia creativit&agrave; migliorandomi sempre pi&ugrave;.<br/>
+							In questa sezione mostro una panoramica dei miei principali progetti.
+						</p>
 					</section>
 
 					<!-- Four -->
 						<section id="four">
 							<div class="gal">
 								<h3>La Maison qui Rit</h3>
-								<p>I developed this site starting from a preformatted template adapting it to the needs of the job. I also worked on the domain purchase and registration.
+								<p>Ho sviluppato questo sito web basandomi su un template preesistente adattandolo alle mie necessit&agrave;. Mi sono anche occupato di registrare il
+									dominio e di pubblicare il sito.
 								<br/><a href="http:\\www.lamaisonquirit.it" target="_blank">Website</a>
 								</p>
 								<div class="box alt work-item">
@@ -57,9 +59,9 @@
 					<section id="three">
 						<div class="gal">
 							<h3>Sea Explorer</h3>
-							<p>For the matriculation exam I developed,&nbsp;together with two my classmates,&nbsp;a submarine ROV.
-							The goal was to create a device remotely controlled by computer that could dive for short periods.
-							<br/><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
+							<p>Per l'esame di maturit&agrave; ho sviluppato,&nbsp;affiancato da due miei compagni,&nbsp;un ROV sommergibile. L'obiettivo era creare un veicolo
+								a controllato tramite PC che fosse in grado di immergersi per brevi periodi di tempo.
+							<br/><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">Tesi di maturit&agrave; (it).</a>
 							</p>
 							<div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
@@ -76,12 +78,11 @@
 					<section id="two">
 						<div class="gal">
 							<h3>ArduinoTube</h3>
-							<p>ArduinoTube is a project,&nbsp;based on the ArduinoYun board,&nbsp;which I developed in 2014
-								as an intern for the municipality of Saint-Marcel. The aim of the project was to create a
-								ROV useful for the inspection of the rain irrigation system pipes,&nbsp;in order to make maintenance easier and cheaper.<br/>
-								Through a web application it is possible to control the ROV by connecting to a special interface and,&nbsp;at the same time,&nbsp;
-								to see through an ipCam installed on board.
-							<br/><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
+							<p>ArduinoTube &egrave; un progetto basato sulla piattaforma ArduinoYun che ho sviluppatp nel 2014 come stagista per il comune di Saint-Marcel.
+								L'obiettivo del progetto era creare un ROV che potesse essere utilizzato per l'ispezione delle condutture del sistema di irrigamento a
+								pioggia in modo da ridurre i costi ed i tempi di manutenzione.<br/>
+								Grazie ad un'interfaccia web &egrave; possibile controllare il ROV da remoto e visionare i dati trasmessi.
+							<br/><a href="docs/ManualArdTube.pdf" target="_blank">Manuale utente ArduinoTube (it).</a>
 							</p>
 							<div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
