--- a/index_it.html
+++ b/index_it.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<a href="index_it.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
-					La mia vita, miei progetti e le mie competenze.</h1>
+					La mia vita,&nbsp;miei progetti e le mie competenze.</h1>
 				</div>
 			</header>
 
@@ -56,7 +56,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="radio_it.html" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
-								<h3>Radio</h3>
+								<h3>Attivit&agrave; radioamatoriale</h3>
 								<p>A partire dal 2016 mi sono avvicinato al mondo radioamatoriale ed ai suoi interessanti risvolti.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
