--- a/photography_it.html
+++ b/photography_it.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
-					La mia vita, miei progetti e le mie competenze.</h1>
+					La mia vita,&nbsp;miei progetti e le mie competenze.</h1>
 				</div>
 			</header>
 
