--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
-					My projects, my skills and my life.</h1>
+					My projects,&nbsp;my skills and my life.</h1>
 				</div>
 			</header>
 
