--- a/arduinoandelectronics_it.html
+++ b/arduinoandelectronics_it.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+				<a href="index_it.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
 				La mia vita,&nbsp;miei progetti e le mie competenze.</h1>
 			</div>
