--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -36,6 +36,25 @@
 							In this section you can see an overview of my projects.</p>
 					</section>
 
+					<!-- Five -->
+						<section id="four">
+							<div class="gal">
+								<h3>Morsy</h3>
+								<p>Within the student team of the Politecnico di Torino "Hackability" I worked on the software and electronics part of this project.
+									Morsy is designed to allow easy communication,&nbsp;through the morse code,&nbsp;to those who cannot communicate in other ways.
+								<br/><a href="https://space.hackability.it/en/" target="_blank">Piattaforma Hackability</a>
+								</p>
+								<div class="box alt work-item">
+									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/01.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/02.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/03.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/04.jpg" alt="" /></a></div>
+									</div>
+								</div>
+							</div>
+						</section>
+
 					<!-- Four -->
 						<section id="four">
 							<div class="gal">
