--- a/arduinoandelectronics_it.html
+++ b/arduinoandelectronics_it.html
@@ -37,6 +37,25 @@
 						</p>
 					</section>
 
+					<!-- Five -->
+						<section id="four">
+							<div class="gal">
+								<h3>Morsy</h3>
+								<p>All'interno del team studentesco del Politecnico di Torino "Hackability" mi sono occupato della parte software e dell'elettronica di questo progetto.
+									Morsy &egrave; pensato per permettere una facile comunicazione,&nbsp;tramite il codice morse,&nbsp;a chi non pu&ograve; comunicare in altri modi.
+								<br/><a href="https://space.hackability.it/it/" target="_blank">Piattaforma Hackability</a>
+								</p>
+								<div class="box alt work-item">
+									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/01.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/02.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/03.jpg" alt="" /></a></div>
+										<div class="col-4"><a href="images/arduinoandelectronics/Morsy/fulls/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/Morsy/thumbs/04.jpg" alt="" /></a></div>
+									</div>
+								</div>
+							</div>
+						</section>
+
 					<!-- Four -->
 						<section id="four">
 							<div class="gal">
@@ -55,6 +74,7 @@
 								</div>
 							</div>
 						</section>
+
 				<!-- Three -->
 					<section id="three">
 						<div class="gal">
