--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -42,7 +42,7 @@
 								<h3>Morsy</h3>
 								<p>Within the student team of the Politecnico di Torino "Hackability" I worked on the software and electronics part of this project.
 									Morsy is designed to allow easy communication,&nbsp;through the morse code,&nbsp;to those who cannot communicate in other ways.
-								<br/><a href="https://space.hackability.it/en/" target="_blank">Piattaforma Hackability</a>
+								<br/><a href="https://space.hackability.it/en/" target="_blank">Hackability website</a>
 								</p>
 								<div class="box alt work-item">
 									<div class="row gtr-50 gtr-uniform">
