--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">andreabalestrini@alice.it</a>
+										<a href="href="mailto:andreabalestrini@alice.it">andreabalestrini@alice.it</a>
 									</li>
 								</ul>
 							</div>
