--- a/index_it.html
+++ b/index_it.html
@@ -81,7 +81,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">andreabalestrini@alice.it</a>
+										<a href="mailto:andreabalestrini@alice.it?Subject=Work%20mail">andreabalestrini@alice.it</a>
 									</li>
 								</ul>
 							</div>
