--- a/radio.html
+++ b/radio.html
@@ -56,13 +56,11 @@
 							<h4>My radio equipment</h4>
 							<p>
 								<h5>ICOM IC2-SE</h5>
-								<a href="docs/IC-2SE_italiano.pdf" target="_blank">Manuale d'uso IC-2SE (it).</a>
-								<br/><a href="docs/IC-2SE_english.pdf" target="_blank">User manual IC-2SE (en).</a>
+								<a href="docs/IC-2SE_english.pdf" target="_blank">User manual IC-2SE (en).</a>
 							</p>
 							<p>
 								<h5>YAESU FT-7900E</h5>
-								<a href="docs/FT-7900E_italiano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
-								<br/><a href="docs/FT-7900E_english.pdf" target="_blank">User manual FT-7900E (en).</a>
+								<a href="docs/FT-7900E_english.pdf" target="_blank">User manual FT-7900E (en).</a>
 							</p>
 							<!--div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
