--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>biomedical engineering student.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>
 					My projects,&nbsp;my skills and my life.</h1>
 				</div>
 			</header>
