--- a/index_it.html
+++ b/index_it.html
@@ -18,7 +18,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index_it.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>,<br/>studente di ingegneria biomedica.<br/>
+					<h1><strong>Balestrini Andrea</strong>,<br/>
 					La mia vita,&nbsp;miei progetti e le mie competenze.</h1>
 				</div>
 			</header>
