--- a/radio.html
+++ b/radio.html
@@ -55,6 +55,10 @@
 						<div>
 							<h4>My radio equipment</h4>
 							<p>
+								<h5>MIDLAND CT990-EB</h5>
+								<a href="docs/CT990-EB_english.pdf" target="_blank">User manual CT990-EB (en).</a>
+							</p>
+							<p>
 								<h5>ICOM IC2-SE</h5>
 								<a href="docs/IC-2SE_english.pdf" target="_blank">User manual IC-2SE (en).</a>
 							</p>
