--- a/radio_it.html
+++ b/radio_it.html
@@ -57,12 +57,16 @@
 						<div>
 							<h4>Il mio equipaggiamento radio</h4>
 							<p>
+								<h5>MIDLAND CT990-EB</h5>
+								<a href="docs/CT990-EB_italiano.pdf" target="_blank">Manuale d'uso CT990-EB (it).</a>
+							</p>
+							<p>
 								<h5>ICOM IC2-SE</h5>
 								<a href="docs/IC-2SE_italiano.pdf" target="_blank">Manuale d'uso IC-2SE (it).</a>
 							</p>
 							<p>
 								<h5>YAESU FT-7900E</h5>
-								<a href="docs/FT-7900E_Italiano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
+								<a href="docs/FT-7900E_otaliano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
 							</p>
 							<!--div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
