--- a/radio_it.html
+++ b/radio_it.html
@@ -66,7 +66,7 @@
 							</p>
 							<p>
 								<h5>YAESU FT-7900E</h5>
-								<a href="docs/FT-7900E_otaliano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
+								<a href="docs/FT-7900E_italiano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
 							</p>
 							<!--div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
